--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,16 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+@tailwind utilities;
+
+@keyframes soundWave {
+  0% { height: 0.25rem; }
+  50% { height: 1.5rem; }
+  100% { height: 0.25rem; }
+}
+
+.sound-wave-bar {
+  height: 0.25rem;
+  animation: soundWave 1s infinite ease-in-out;
+  animation-delay: calc(var(--i) * 0.1s);
+} 
